--- a/app/assets/javascripts/angular/app.js.erb
+++ b/app/assets/javascripts/angular/app.js.erb
@@ -2,8 +2,8 @@ var app = angular.module("picksleagueApp", ['ngResource', 'ngRoute']);
 
 app.config(['$routeProvider', function($routeProvider){
   $routeProvider
-  .when("/" {
-    templateUrl: "<%= asset_path('templates/home.html') %>",
+  .when("/", {
+    templateUrl: "<%= asset_path('angular/templates/home.html') %>",
     controller: "HomeController"
   })
   .otherwise({
