add view for all teams and link to teams/:id

--- a/app/assets/javascripts/angular/templates/home.html
+++ b/app/assets/javascripts/angular/templates/home.html
@@ -1,5 +1,5 @@
 <div class="small-12 columns">
-  <div ng-repeat="team in teams">
-    <p>{{team.id}}. {{team.name}}</p>
+  <div ng-click="viewTeams()">
+    <a>View Teams</a>
   </div>
 </div>
