--- a/app/assets/javascripts/angular/app.js.erb
+++ b/app/assets/javascripts/angular/app.js.erb
@@ -6,6 +6,14 @@ app.config(['$routeProvider', function($routeProvider){
     templateUrl: "<%= asset_path('angular/templates/home.html') %>",
     controller: "HomeController"
   })
+  .when("/teams", {
+    templateUrl: "<%= asset_path('angular/templates/teams.html') %>",
+    controller: "TeamController"
+  })
+  .when("/teams/:id", {
+    templateUrl: "<%= asset_path('angular/templates/one-team.html') %>",
+    controller: "TeamController"
+  })
   .otherwise({
     redirectTo: "/"
   })
