--- a/app/assets/javascripts/angular/templates/teams.html
+++ b/app/assets/javascripts/angular/templates/teams.html
@@ -1,5 +1,5 @@
 <div class="small-12 columns">
   <div ng-repeat="team in teams" ng-click="selectTeam(team)">
-    {{team.id}}. {{team.name}}
+    {{team.id}}. <a>{{team.name}}</a>
   </div>
 </div>
