add matchup dropdown menus

--- a/app/assets/javascripts/angular/templates/home.html
+++ b/app/assets/javascripts/angular/templates/home.html
@@ -1,5 +1,10 @@
-<div class="small-12 columns">
-  <div ng-click="viewTeams()">
-    <a>View Teams</a>
+<div class="row">
+  <div class="small-12 columns">
+    <div ng-click="viewTeams()">
+      <a>View Teams</a>
+    </div>
+    <div ng-click="viewAddMatchup()">
+      <a>Add Matchup</a>
+    </div>
   </div>
 </div>
