add get_matchups method in controller, add views for new matchup and all matchups, update angular service to retrieve from get matchups

--- a/app/assets/javascripts/angular/app.js.erb
+++ b/app/assets/javascripts/angular/app.js.erb
@@ -14,8 +14,16 @@ app.config(['$routeProvider', function($routeProvider){
     templateUrl: "<%= asset_path('angular/templates/one-team.html') %>",
     controller: "OneTeamController"
   })
-  .when("/matchup", {
-    templateUrl: "<%= asset_path('angular/templates/matchup.html') %>",
+  .when("/matchups/new", {
+    templateUrl: "<%= asset_path('angular/templates/new-matchup.html') %>",
+    controller: "NewMatchupController"
+  })
+  .when("/matchups", {
+    templateUrl: "<%= asset_path('angular/templates/matchups.html') %>",
+    controller: "MatchupController"
+  })
+  .when("/matchups/:id", {
+    templateUrl: "<%= asset_path('angular/templates/matchups.html') %>",
     controller: "MatchupController"
   })
   .otherwise({
