--- a/app/assets/javascripts/angular/templates/home.html
+++ b/app/assets/javascripts/angular/templates/home.html
@@ -6,5 +6,8 @@
     <div ng-click="viewAddMatchup()">
       <a>Add Matchup</a>
     </div>
+    <div ng-click="viewMatchups()">
+      <a>View Matchups</a>
+    </div>
   </div>
 </div>
