select week when adding matchup

--- a/app/assets/javascripts/angular/templates/new-matchup.html
+++ b/app/assets/javascripts/angular/templates/new-matchup.html
@@ -1,6 +1,11 @@
 <div class="row">
 
   <form ng-submit="create(team)">
+    <div class="small-12 columns">
+      <p>Select Week</p>
+      <!-- <input type="number" ng-model="team.week"/> -->
+      <select ng-model="team.week" ng-options="week.week for week in weeks"></select>
+    </div>
     <div class="small-6 columns">
       <p>Away Team</p>
       <select ng-model="team.away_team" ng-options="team.name for team in teams"></select>
