update responsiveness of add matchup template

--- a/app/assets/javascripts/angular/templates/new-matchup.html
+++ b/app/assets/javascripts/angular/templates/new-matchup.html
@@ -6,12 +6,12 @@
       <!-- <input type="number" ng-model="team.week"/> -->
       <select ng-model="team.week" ng-options="week.week for week in weeks"></select>
     </div>
-    <div class="small-6 columns">
+    <div class="large-6 small-12 columns">
       <p>Away Team</p>
       <select ng-model="team.away_team" ng-options="team.name for team in teams"></select>
     </div>
 
-    <div class="small-6 columns">
+    <div class="large-6 small-12 columns">
       <p>Home Team</p>
       <select ng-model="team.home_team" ng-options="team.name for team in teams"></select>
     </div>
