--- a/app/assets/javascripts/angular/templates/new-matchup.html
+++ b/app/assets/javascripts/angular/templates/new-matchup.html
@@ -1,10 +1,10 @@
 <div class="row">
 
-  <form ng-submit="create(team)">
+  <form ng-submit="newMatchup(team)">
     <div class="small-12 columns">
       <p>Select Week</p>
       <!-- <input type="number" ng-model="team.week"/> -->
-      <select ng-model="week" ng-options="week.week for week in weeks"></select>
+      <select ng-model="team.week" ng-options="week for week in weeks"></select>
     </div>
     <div class="large-6 small-12 columns">
       <p>Away Team</p>
