update to retrieve teams for each weeks matchups

--- a/app/assets/javascripts/angular/templates/matchups.html
+++ b/app/assets/javascripts/angular/templates/matchups.html
@@ -11,8 +11,8 @@
 
 <div class="row">
 
-  <div class="small-12 columns" ng-repeat="matchup in allMatchups">
-    <!-- {{matchup.away}} vs. {{matchup.home}} -->
+  <div class="small-12 columns" ng-repeat="matchup in weeklyMatchup">
+    {{matchup.away_team}} vs. {{matchup.home_team}}
   </div>
-  {{weeklyMatchups}}
+
 </div>
